feat: 身份证号脱敏

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "electron:start": "cross-env VITE_DEV_SERVER_URL=http://localhost:5175 electron ."
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "antd": "^5.26.4",
     "react": "^19.1.0",
